# py-apifactory

./: LICENSE.md  pyproject.toml
apifactory/: service.py
examples/tasks/: __main__.py  spec.yml
examples/tasks/controllers/: tasks.py
test/: spec.yml  test_service.py
test/controllers/: test_controller.py
