[project]
name = "py-apifactory"
version = "0.1.1"
description = """
    Web framework for API-first development via OpenAPI specification with included validation according
    to OpenAPI based on Starlette, uvicorn and openapi-core.
"""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Alexander Andreev", email = "alexanderfromearth@gmail.com"}
]
urls = { repository = "https://github.com/AlexanderFromEarth/py-apifactory.git" }
dependencies = [
    "aioitertools==0.12.0",
    "openapi-core==0.19.5",
    "starlette==0.46.2",
    "uvicorn==0.34.2",
]
